crates/ohno_macros_impl/src/error_attr/snapshots/ohno_macros_impl__error_attr__tests__a_colliding_name_is_numbered.snap
---
source: crates/ohno_macros_impl/src/error_attr/mod/tests.rs
expression: "rendered(parse_quote! { struct T { ohno_core: u32, ohno_core_1: u32 } })"
---
#[derive(::ohno::Error)]
struct T {
    ohno_core: u32,
    ohno_core_1: u32,
    /// ohno::generated-core@7f3d9c2a
    ohno_core_2: ::ohno::OhnoCore,
}
