crates/ohno_macros_impl/src/error_attr/snapshots/ohno_macros_impl__error_attr__tests__a_hand_written_reserved_marker_is_rejected.snap
---
source: crates/ohno_macros_impl/src/error_attr/mod/tests.rs
expression: "rendered(parse_quote!\n{\n    struct T\n    {\n        path: String, #[doc = \" ohno::generated-core@7f3d9c2a\"] mine:\n        ohno::OhnoCore,\n    }\n})"
---
::core::compile_error! {
    "This doc comment is reserved for `#[ohno::error]`, which puts it on the OhnoCore field it adds. Remove it; if this is the field holding the OhnoCore, use `#[derive(ohno::Error)]` and mark it with `#[error]`"
}
