crates/ohno_macros_impl/src/error_attr/snapshots/ohno_macros_impl__error_attr__tests__a_named_struct_gains_a_named_core.snap
---
source: crates/ohno_macros_impl/src/error_attr/mod/tests.rs
expression: "rendered(parse_quote! { struct T { path: String } })"
---
#[derive(::ohno::Error)]
struct T {
    path: String,
    /// ohno::generated-core@7f3d9c2a
    ohno_core: ::ohno::OhnoCore,
}
