crates/ohno_macros_impl/src/error_attr/snapshots/ohno_macros_impl__error_attr__tests__a_non_struct_is_rejected.snap
---
source: crates/ohno_macros_impl/src/error_attr/mod/tests.rs
expression: "rendered(parse_quote!(enum T { A, }))"
---
::core::compile_error! {
    "`#[ohno::error]` supports structs only. A struct is what can hold the OhnoCore field it adds"
}
