crates/ohno_macros_impl/src/error_attr/snapshots/ohno_macros_impl__error_attr__tests__a_unit_struct_becomes_a_tuple_struct.snap
---
source: crates/ohno_macros_impl/src/error_attr/mod/tests.rs
expression: rendered(parse_quote!(struct T;))
---
#[derive(::ohno::Error)]
struct T(
    /// ohno::generated-core@7f3d9c2a
    ::ohno::OhnoCore,
);
