crates/ohno_macros_impl/src/error_attr/snapshots/ohno_macros_impl__error_attr__tests__an_ordinary_doc_comment_is_left_alone.snap
---
source: crates/ohno_macros_impl/src/error_attr/mod/tests.rs
expression: "rendered(parse_quote!\n{ struct T { #[doc = r\" Where the failure happened.\"] path: String, } })"
---
#[derive(::ohno::Error)]
struct T {
    /// Where the failure happened.
    path: String,
    /// ohno::generated-core@7f3d9c2a
    ohno_core: ::ohno::OhnoCore,
}
