crates/ohno_macros_impl/src/error_attr/snapshots/ohno_macros_impl__error_attr__tests__other_attributes_and_docs_survive.snap
---
source: crates/ohno_macros_impl/src/error_attr/mod/tests.rs
expression: "rendered(parse_quote!\n{\n    #[doc = r\" Documentation for T.\"] #[derive(Clone)]\n    #[display(\"failed for {path}\")] struct T { path: String }\n})"
---
#[derive(::ohno::Error)]
/// Documentation for T.
#[derive(Clone)]
#[display("failed for {path}")]
struct T {
    path: String,
    /// ohno::generated-core@7f3d9c2a
    ohno_core: ::ohno::OhnoCore,
}
